--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -92,7 +92,8 @@
                 android:drawablePadding="6dp"
                 android:text="@string/action_register"
                 android:textColor="@color/White"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:visibility="gone" />
 
             <android.support.v7.widget.AppCompatButton
                 android:id="@+id/btn_forgot_password"
@@ -106,7 +107,8 @@
                 android:gravity="center_horizontal|center_vertical"
                 android:text="@string/action_forgot_password"
                 android:textColor="@color/colorPrimary"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:visibility="gone" />
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
